Implement all of UI layer, except for rendering